[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_right = 160.0
margin_bottom = 40.0
bbcode_enabled = true
bbcode_text = "[wave amp=50 freq=2][center]VAMPIRE: UNTIL DAWN[/center][/wave]"
text = "VAMPIRE: UNTIL DAWN"

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 104.0
margin_right = 32.0
margin_bottom = 124.0
text = "PLAY"

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 152.0
margin_right = 32.0
margin_bottom = 172.0
text = "Quit"

[connection signal="button_up" from="PlayButton" to="." method="_on_PlayButton_button_up"]
[connection signal="button_up" from="QuitButton" to="." method="_on_QuitButton_button_up"]
